# vt_grasp_ws

./: =2.5.0  frames_2026-01-07_11.47.00.gv  readme.md
src/tactile_sensor_ros/: CMakeLists.txt  package.xml  reademe.md
src/tactile_sensor_ros/launch/: sensor.launch.py
src/tactile_sensor_ros/msg/: FingerData.msg  TactileArray.msg
src/tactile_sensor_ros/tactile_driver/: ch341_driver.py  finger.py  sensor_cmd.py  sensor_para.py  tactile_node.py
src/ts_robot_description/: CMakeLists.txt  package.xml
src/ts_robot_description/launch/: display.launch.xml  ts_robot_display.launch.py
src/ts_robot_description/mesh/fence/collision/: fence.stl
src/ts_robot_description/mesh/gripper/collision/: finger_pad.stl
src/ts_robot_description/mesh/gripper/visual/: finger_pad.stl
src/ts_robot_description/mesh/hand_tool/visual/: hand_tool.stl
src/ts_robot_description/mesh/table/visual/: table.stl
src/ts_robot_description/rviz/: rviz.rviz
src/ts_robot_description/urdf/: arm.xacro  camera.xacro  common_properties.xacro  fence.xacro  gripper.xacro  hand_tool.xacro  table.xacro  ts_robot.urdf.xacro
src/ts_robot_description/urdf/camera/: _d435.urdf.xacro  _usb_plug.urdf.xacro
src/visual_tactile_grasping/: package.xml  setup.cfg  setup.py
src/visual_tactile_grasping/launch/: system.launch.py
src/visual_tactile_grasping/visual_tactile_grasping/: main_controller.py  motion_control.py  perception.py  tactile_gripper.py  test_tactile_algo.py  utils.py
